unpackaged/main/default/objects/CaseToSQRSetting__c/CaseToSQRSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CaseToSQR Setting</description>
    <label>CaseToSQR Setting</label>
</CustomObject>