unpackaged/main/default/objects/CaseToSQRSetting__c/fields/ApplicationID__c.field-meta.xml
<CustomField>
    <fullName>ApplicationID__c</fullName>
    <description>ApplicationID for Case to SQR Webservice Authentication</description>
    <label>ApplicationID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>