unpackaged/main/default/objects/CaseToSQRSetting__c/fields/ApplicationKey__c.field-meta.xml
<CustomField>
    <fullName>ApplicationKey__c</fullName>
    <description>ApplicationKey for Case to SQR Webservice Authentication</description>
    <label>ApplicationKey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>