unpackaged/main/default/objects/CaseToSQRSetting__c/fields/Authentication_EndPoint__c.field-meta.xml
<CustomField>
    <fullName>Authentication_EndPoint__c</fullName>
    <description>Case to SQR Webservice Authentication End Point</description>
    <label>Authentication EndPoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>