unpackaged/main/default/objects/CaseToSQRSetting__c/fields/Client_EndPoint__c.field-meta.xml
<CustomField>
    <fullName>Client_EndPoint__c</fullName>
    <description>Case to SQR Webservice Client End Point</description>
    <label>Client EndPoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>