unpackaged/main/default/objects/CaseToSQRSetting__c/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <description>Case to SQR Webservice End Point</description>
    <label>EndPoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>