unpackaged/main/default/objects/CaseToSQRSetting__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Password for Case to SQR Webservice Authentication</description>
    <label>Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>