unpackaged/main/default/objects/CaseToSQRSetting__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username for Case to SQR Webservice Authentication</description>
    <label>Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>